--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,18 @@
 {
 	"default_locale":"en",
 	"name": "__MSG_extName__",
+	"manifest_version": 2,
 	"description": "__MSG_extDescr__",
 	"version": "1.4.3",
-	"background_page": "background.html",
+	"background": {
+		"page": "background.html"
+	},
+	/*"content_security_policy": "script-src 'self'; object-src 'self'",*/
 	"options_page": "options.html",
 	"browser_action": {
 		"default_icon": "icon.png",
 		"default_title": "__MSG_lastQuote__",
-		"popup": "popup.html"
+		"default_popup": "popup.html"
 	},
 	"permissions": [
 		"notifications",
